//
//  AccessibilityHelper.swift
//  TheMovieDB
//
//  Created by Stefanny Toro Ramirez on 4/22/19.
//  Copyright © 2019 Globant. All rights reserved.
//

import Foundation

enum AccessibilityHelper: String {
    case MovieTable
    case MovieCell
    case TitleDetailMovie
    case OverviewDetailMovie
    case DateDetailMovie
}
