...
    let transition = PopAnimation()
    var selectedImage: UIImageView?
    var selectedListType : MoviesListType = .nowPlaying

    override func viewDidLoad() {
        super.viewDidLoad()
        self.navigationItem.title = "Trending"
        requestTrending()
        checkDevice()
        configurelistView()
        transition.dismissCompletion = {
            self.selectedImage!.isHidden = false
        }
...
